--- a/Sign-Up-Forms/style.css
+++ b/Sign-Up-Forms/style.css
@@ -5,8 +5,9 @@ body {
 	height: fit-content;
 	background-image: url(bgimg.svg);
 	background-size: auto;
+	margin: 0;
 }
-.body-filter {
+#body-filter {
 	width: 100%;
 	height: 100%;
 	display: block;
@@ -19,8 +20,9 @@ body {
 		rgba(172, 33, 0, 1)
 	);
 	margin: 0;
-	opacity: 0.5;
-	z-index: -1;
+	opacity: 1;
+	z-index: 1;
+	transition: 0.2s;
 }
 .main-text-content {
 	display: flex;
@@ -42,7 +44,7 @@ body {
 	padding: 1vw;
 	border-radius: 20px;
 	margin: 6vh 0 0 0;
-	transition: 0.1s ease-in-out;
+	transition: 0.2s ease-in-out;
 }
 .gold-member:hover {
 	transform: translateY(-5px);
@@ -60,11 +62,12 @@ body {
 	width: fit-content;
 	height: fit-content;
 	padding: 3vw;
-	margin: 2vh 2vw 6vh 2vw;
+	margin: 2vh 2vw 0 2vw;
 	display: flex;
 	background-color: #ffffff;
 	border-radius: 20px;
-	box-shadow: 6px 8px rgba(172, 33, 0, 0.3);
+	border: 5px solid rgba(255, 174, 0, 0.506);
+	box-shadow: 6px 8px rgba(111, 23, 1, 0.547);
 	font-family: Poppins;
 }
 form {
@@ -144,4 +147,16 @@ a.sub-message:visited {
 }
 a.sub-message:hover {
 	text-shadow: 0 0 10px #ffffff;
+}
+.gold {
+	color: black;
+	background-image: linear-gradient(135deg, #ffd700, #ffb700);
+	border-radius: 50px;
+	width: fit-content;
+	height: fit-content;
+	padding: 4px;
+}
+.inline-text {
+	color: #a248f1;
+	text-shadow: 0 0 5px#d07eff;
 }
